--- a/src/global.css
+++ b/src/global.css
@@ -1,14 +1,11 @@
 :root{
     --white: #ffffff;
-    --gray-100: #e1e1e6;
-    --gray-300: #c4c4cc;
-    --gray-400: #8d8d99;
-    --gray-600: #323238;
-    --gray-700: #29292e;
+    --pink-600: #CA6563;
+    --rubi-700:#611e1d;
     --gray-800: #202024;
-    --gray-900: #121214;
-
-    --green-500:#00875f;
+    --gray-900: #FFEDE7;
+    --pale-500:#ffffff;
+    --green-200:#84af7a;
 }
 
 *{
