--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,10 +1,11 @@
 .header{
-    background: var(--gray-800);
+    background: var(--pink-600);
     display: flex;
     justify-content: center;
-    padding: 1.25rem;
+    padding: 0.1rem;
 }
 
 .header img{
-    height: 2rem;
+    height: 4rem;
+    
 }
