--- a/src/components/Comment.module.css
+++ b/src/components/Comment.module.css
@@ -14,7 +14,7 @@
     }
     
     .commentContent{
-        background: var(--gray-900);
+        background: var(--pale-500);
         border-radius: 7px;
         padding: 4rem,;
     }
@@ -23,25 +23,27 @@
         display: flex;
         align-items: flex-start;
         justify-content: space-between;
+        
     }
     
     .authorAndTime strong{
         display:block;
         font-size: 0.875rem;
         line-height: 1.6;
+        color: var(--rubi-700);
     }
     
     .authorAndTime time {
         display:block;
         font-size: 0.75rem;
         line-height: 1.6;
-        color: var(--pale-600);
+        color: var(--rubi-700);
     }
     
     .commentContent header button{
         background: transparent;
         border:0;
-        color: var(--pink-600);
+        color: var(--green-200);
         cursor:pointer;
         line-height: 0;
         border-radius: 4px;
@@ -53,6 +55,7 @@
     .commentContent p {
     margin-top: 1rem;
     color: var(--rubi-700);
+   
     }
     
     .commentBox footer{
@@ -69,7 +72,8 @@
     }
     
     .commentBox footer button:hover{
-    color: var(--pale-600);
+    color: var(--pale-500);
+    background-color: transparent;
     
     }
     
