--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -2,7 +2,7 @@
     background: var(--pink-600);
     border-radius: 8px;
     padding: 2.5rem;
-    border: 2px solid var(--pale-500);
+    border: 2px solid var(--hot-100);
     
 
 }
